<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg" >

    <TextView
        android:id="@+id/splash_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/splash_status_loading"
        android:textColor="@color/color_base_subtitle"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textColor="@color/color_base_title"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp" >

        <Button
            android:id="@+id/enter_offline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button_pink"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/enter_offline"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/enter_reload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button_blue"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/enter_reload"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button_pink"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/enter"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>